--- a/views/Shop.ejs
+++ b/views/Shop.ejs
@@ -43,8 +43,8 @@
                     <a href="/Shop/<%= locals.print[index]._id %>"><img src="https://www.numerama.com/content/uploads/2019/05/trou-noir-espace-univers-astronomie.jpg" class="card-img-top" alt="<%= locals.print[index].title %>"></a>
                     <div class="card-body">
                       <h5 class="card-title"><i><a href="/Shop/<%= locals.print[index]._id %>"><%= locals.print[index].shorttitle %></a></i></h5>
-                      <p class="card-text gallery-description"><%= locals.print[index].shortcontent %></p>
-                      <div class="row mt-4">
+                      <p class="card-text gallery-description mb-5"><%= locals.print[index].shortcontent %></p>
+                      <div class="row shop-price-row mt-4">
                         <div class="shop-price-col col-6">
                           <b class="card-price"><%= locals.print[index].price %>€</b>
                           <% if (locals.print[index].isUnique) { %>
