--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -47,7 +47,7 @@
               <a
                 href="/About"
                 class="navbar-text <%= (locals.active && locals.active == 'About') ? 'active' : '' %>"
-                >About</a
+                >À propos</a
               >
             </li>
             <li>
@@ -85,7 +85,7 @@
               <a
                 href="/Admin"
                 class="navbar-text <%= (locals.active && locals.active == 'Admin') ? 'active' : '' %>"
-                >ADMIN PANNEL</a
+                >ADMIN</a
               >
             </li>
             <% } %>
