--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,22 +1,20 @@
 <footer class="page-footer font-small">
-            <div class="footer-links col-md-12 mb-md-0">
-              <ul class="footer-list">
-                <li>
-                  <!--<a href="#!"><img class="footer-logo"  src="/svg/instagram.svg" alt="instagram-logo"/></a>-->
-                  <a href="#!" class="social-btn"><i class="fab fa-instagram"></i></a>
-                </li>
-                <li>
-                  <a href="#!" class="social-btn"><i class="fab fa-facebook-f"></i></a>
-                </li>
-                <li>
-                  <a href="#!" class="social-btn"><i class="fab fa-pinterest-p"></i></a>
-                </li>
-
-              </ul>
-            </div>
-        <div class="footer-copyright text-center">© 2019 Copyright Maral - 
-          Développé par <a href="https://github.com/ablin42"> @ablin42</a>
-        </div>
-      </footer>
+  <div class="footer-links col-md-12 mb-md-0">
+    <ul class="footer-list">
+      <li>
+        <a href="#!" class="social-btn"><i class="fab fa-instagram"></i></a>
+      </li>
+      <li>
+        <a href="#!" class="social-btn"><i class="fab fa-facebook-f"></i></a>
+      </li>
+      <li>
+        <a href="#!" class="social-btn"><i class="fab fa-pinterest-p"></i></a>
+      </li>
+    </ul>
+  </div>
+  <div class="footer-copyright text-center">
+    © 2019 Copyright Maral - Développé par <a href="https://github.com/ablin42"> @ablin42</a>
+  </div>
+</footer>
 </body>
 </html>
