--- a/views/single/Shop-single.ejs
+++ b/views/single/Shop-single.ejs
@@ -50,7 +50,7 @@
             <p class="blog-content col-10 offset-1 mt-2"><%= locals.shopItem.content %></p>
 
             <div class="col-10 offset-1">
-                <b class="card-price">%= locals.shopItem.price %>€</b><br />
+                <b class="card-price"><%= locals.shopItem.price %>€</b><br />
                 <% if (locals.shopItem.isUnique) { %>
                     <b class="isUnique">Toile unique</b>
                 <% } %>
