--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -117,7 +117,19 @@
         </div>
       </div>
       <% } %>
-   
+      <div class="col-md-6"><!-- duplicate from above !isDelivery -->
+        <div class="payment-div p-3">
+          <% if (locals.totalPrice != 0){ %>
+            <span id="total-price-span">PRIX TOTAL: <b id="total-price"><%= locals.totalPrice %>€</b></span>
+          <% } %>
+          <% if (locals.totalQty != 0){ %>
+            <span id="total-qty-span">QUANTITÉ TOTALE: <b id="total-qty"><%= locals.totalQty %></b></span>
+          <% } %>
+          <% if (locals.totalPrice != 0){ %>
+            <button class="btn-purchase" onclick="submitCheckout();" type="button" id="purchase">Continuer</button>
+          <% } %>
+        </div>
+      </div>
   </div>
 </div>
 
