--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -27,7 +27,7 @@
       </ul>
     </div>
 
-    <div id="login" class="tab col-9 row" style="display: none;">
+    <div id="login" class="tab col-9 row">
       <div class="container" id="container">
         <div class="form-slider-container sign-up-container">
           <form
@@ -150,7 +150,7 @@
       </div>
     </div>
 
-    <div id="lostpw-container" class="tab col-9">
+    <div id="lostpw-container" class="tab col-9" style="display: none;">
       <section class="lostpw-section col-10 offset-1 p-5">
         <div class="box">
           <div class="section-heading mb-5">
