--- a/views/About.ejs
+++ b/views/About.ejs
@@ -54,53 +54,44 @@
                     <img class="square-img" src="https://i.imgur.com/4rBbPSy.png" style="float: left"/>
                     <h1 class="square-title" style="font-size: 40px;">Maral Abkarian</h1>
                     <p class="square-txt">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus rutrum a enim ac iaculis.
-                        Aenean pellentesque lorem sollicitudin lobortis elementum. Donec malesuada purus magna, quis cursus erat consectetur et.
-                        Morbi eget arcu libero.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus rutrum a enim ac iaculis.
-                        Aenean pellentesque lorem sollicitudin lobortis elementum. Donec malesuada purus magna, quis cursus erat consectetur et.
-                        Morbi eget arcu libero.<br />
-                        Donec et gravida erat. Aenean aliquet felis et facilisis faucibus.
-                        Praesent id ipsum elementum, vehicula nunc sed, gravida ex.
-                        Duis et mi ullamcorper, porta turpis sit amet, lobortis ligula. Praesent eget lacus urna.
-                        Praesent id ipsum elementum, vehicula nunc sed, gravida ex.
-                        Praesent id ipsum elementum, vehicula nunc sed, gravida ex.
-                        Praesent id ipsum elementum, vehicula nunc sed, gravida ex.
+                      Née durant la seconde moitié du XXème siècle, élevée entre Orient du Levant et Occident tricolore,
+                      établie sur trois continents, Maral a dans la continuité de ses ancêtres déracinés de leur terre natale par le génocide arménien en 1915,
+                      vécu dans différentes contrées à travers le monde.
+
                     </p>
                 </div>
                 <div class="bio-square">
-                    <h1 class="square-title">Lorem ipsum dolor sit</h1>
+                    <!--<h1 class="square-title">Lorem ipsum dolor sit</h1>-->
                     <p class="square-txt">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus rutrum a enim ac iaculis.
-                        Aenean pellentesque lorem sollicitudin lobortis elementum. Donec malesuada purus magna, quis cursus erat consectetur et.
-                        Morbi eget arcu libero.<br />
-                        Donec et gravida erat. Aenean aliquet felis et facilisis faucibus.
-                        Praesent id ipsum elementum, vehicula nunc sed, gravida ex.
-                        Duis et mi ullamcorper, porta turpis sit amet, lobortis ligula. Praesent eget lacus urna.
-                        Praesent id ipsum elementum, vehicula nunc sed, gravida ex.
-                        Duis et mi ullamcorper, porta turpis sit amet, lobortis ligula.
+                      C’est sous un beau jour printanier d’avril, qu’à peine sa mère débarqua au port de la cité phocéenne,
+                      faisant ses adieux à son Liban natal, qu’elle vit le jour. Dès son plus jeune âge, elle fut remarquée pour son talent artistique et sa sensibilité, 
+                      raflant régulièrement les premiers prix des concours artistiques scolaires, derrière son sourire timide et un caractère espiègle.
+                      <br />
+                      <br />
+                      Le temps passa et la petite fille grandissante devint une adolescente en fleur au pays des cèdres,
+                      contrée d’accueil de ses parents natals. Mais les nuages obscures s’étendant, la guerre civile plongea le chaos, obligeant la fratrie à fuir vers la Syrie, 
+                      s’envolant à nouveau vers les terres d’exil, jusqu’en Amérique.
+                      <br />
+                      <br />
+                      De retour finalement en France, Maral a de ses carnets de voyages cultivé une riche expérience de cultures très diverses,
+                      française, anglo-saxonne, arabo-levantine, arméno-anatolienne et hellénique. 
                     </p class="square-txt">
                 </div>
                 <div class="bio-square mt-1">
-                    <h1 class="square-title">Duis et mi ullamcorper</h1>
+                    <!--<h1 class="square-title">Phasellus rutrum a enim ac iaculis.</h1>-->
                     <p class="square-txt">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus rutrum a enim ac iaculis.
-                        Aenean pellentesque lorem sollicitudin lobortis elementum. Donec malesuada purus magna, quis cursus erat consectetur et.
-                        Morbi eget arcu libero.<br />
-                        Donec et gravida erat. Aenean aliquet felis et facilisis faucibus.
-                        Praesent id ipsum elementum, vehicula nunc sed, gravida ex.
-                        Duis et mi ullamcorper, porta turpis sit amet, lobortis ligula. Praesent eget lacus urna.
-                    </p class="square-txt">
-                </div>
-                <div class="bio-square mt-1">
-                    <h1 class="square-title">Phasellus rutrum a enim ac iaculis.</h1>
-                    <p class="square-txt">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus rutrum a enim ac iaculis.
-                        Aenean pellentesque lorem sollicitudin lobortis elementum. Donec malesuada purus magna, quis cursus erat consectetur et.
-                        Morbi eget arcu libero.<br />
-                        Donec et gravida erat. Aenean aliquet felis et facilisis faucibus.
-                        Praesent id ipsum elementum, vehicula nunc sed, gravida ex.
-                        Duis et mi ullamcorper, porta turpis sit amet, lobortis ligula. Praesent eget lacus urna.
+                      Sa quête artistique est celle d’un beau naturel, dépouillé vers une authenticité directe et accessible à tous,
+                      à l’image de son hypersensibilité, spirituelle. Les figures gracieuses, le partage et l’âpreté de la vie humaine sont mises à nues dans son travail, 
+                      tantôt figuratif, tantôt semi-abstrait, avec le goût du relief et d’un toucher parfois brut, non sans délicatesse.
+                      <br />
+                      <br />
+                      Son goût pour les portraits et les paysages apparaissent régulièrement, témoignant également d’une innocence, sensualité, fraîcheur perdue à notre époque de plus en plus connectée.
+                      L’ancien et le moderne, l’occidental et l’oriental, le spirituel et le terrestre, la vie et l’au-delà, thèmes complémentaires que Maral aime exprimer à travers ses œuvres, 
+                      un message d’espoir et joie, de profondeur, parfois teinté de mélancolie face aux contingences qu’endure l’humain.
+                      <br />
+                      <br />
+                      Soeur de l'acteur Simon Abkarian, Maral Abkarian développe désormais une carrière d'actrice, également connue pour ses talents de gastronome,
+                      à la personnalité démonstrative et chaleureuse, non sans pudeur, seule sœur de ses trois frères.
                     </p>
                 </div>
             </div>
